grammar.output
Terminals unused in grammar

    EXTERN
    STATIC
    AUTO
    REGISTER
    VOLATILE


State 303 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | CONSTANT
    3                   | STRING_LITERAL
    4                   | '(' expression ')'

    5 postfix_expression: primary_expression
    6                   | postfix_expression '[' expression ']'
    7                   | IDENTIFIER '(' ')'
    8                   | IDENTIFIER '(' argument_expression_list ')'
    9                   | postfix_expression '.' IDENTIFIER
   10                   | postfix_expression PTR_OP IDENTIFIER
   11                   | postfix_expression INC_OP
   12                   | postfix_expression DEC_OP

   13 argument_expression_list: assignment_expression
   14                         | argument_expression_list ',' assignment_expression

   15 unary_expression: postfix_expression
   16                 | INC_OP unary_expression
   17                 | DEC_OP unary_expression
   18                 | unary_operator cast_expression
   19                 | SIZEOF unary_expression
   20                 | SIZEOF '(' type_name ')'

   21 unary_operator: '&'
   22               | '*'
   23               | '+'
   24               | '-'
   25               | '~'
   26               | '!'

   27 cast_expression: unary_expression
   28                | '(' type_name ')' cast_expression

   29 multiplicative_expression: cast_expression
   30                          | multiplicative_expression '*' cast_expression
   31                          | multiplicative_expression '/' cast_expression
   32                          | multiplicative_expression '%' cast_expression

   33 additive_expression: multiplicative_expression
   34                    | additive_expression '+' multiplicative_expression
   35                    | additive_expression '-' multiplicative_expression

   36 shift_expression: additive_expression
   37                 | shift_expression LEFT_OP additive_expression
   38                 | shift_expression RIGHT_OP additive_expression

   39 relational_expression: shift_expression
   40                      | relational_expression '<' shift_expression
   41                      | relational_expression '>' shift_expression
   42                      | relational_expression LE_OP shift_expression
   43                      | relational_expression GE_OP shift_expression

   44 equality_expression: relational_expression
   45                    | equality_expression EQ_OP relational_expression
   46                    | equality_expression NE_OP relational_expression

   47 and_expression: equality_expression
   48               | and_expression '&' equality_expression

   49 exclusive_or_expression: and_expression
   50                        | exclusive_or_expression '^' and_expression

   51 inclusive_or_expression: exclusive_or_expression
   52                        | inclusive_or_expression '|' exclusive_or_expression

   53 logical_and_expression: inclusive_or_expression
   54                       | logical_and_expression AND_OP inclusive_or_expression

   55 logical_or_expression: logical_and_expression
   56                      | logical_or_expression OR_OP logical_and_expression

   57 conditional_expression: logical_or_expression
   58                       | logical_or_expression '?' expression ':' conditional_expression

   59 assignment_expression: conditional_expression
   60                      | unary_expression assignment_operator assignment_expression

   61 assignment_operator: '='
   62                    | MUL_ASSIGN
   63                    | DIV_ASSIGN
   64                    | MOD_ASSIGN
   65                    | ADD_ASSIGN
   66                    | SUB_ASSIGN
   67                    | LEFT_ASSIGN
   68                    | RIGHT_ASSIGN
   69                    | AND_ASSIGN
   70                    | XOR_ASSIGN
   71                    | OR_ASSIGN

   72 expression: assignment_expression
   73           | expression ',' assignment_expression

   74 constant_expression: conditional_expression

   75 declaration: declaration_specifiers ';'
   76            | declaration_specifiers init_declarator_list ';'

   77 declaration_specifiers: storage_class_specifier
   78                       | storage_class_specifier declaration_specifiers
   79                       | type_specifier
   80                       | type_specifier declaration_specifiers
   81                       | type_qualifier
   82                       | type_qualifier declaration_specifiers

   83 init_declarator_list: init_declarator
   84                     | init_declarator_list ',' init_declarator
   85                     | error
   86                     | init_declarator_list ',' error

   87 init_declarator: declarator
   88                | declarator '=' assignment_expression

   89 storage_class_specifier: TYPEDEF

   90 type_specifier: VOID
   91               | CHAR
   92               | SHORT
   93               | INT
   94               | LONG
   95               | FLOAT
   96               | DOUBLE
   97               | SIGNED
   98               | UNSIGNED
   99               | struct_or_union_specifier
  100               | enum_specifier
  101               | TYPE_NAME

  102 struct_or_union_specifier: struct_or_union_id '{' struct_declaration_list '}'
  103                          | struct_or_union_id

  104 struct_or_union_id: struct_or_union IDENTIFIER

  105 struct_or_union: STRUCT
  106                | UNION

  107 struct_declaration_list: struct_declaration
  108                        | struct_declaration_list struct_declaration

  109 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  110 specifier_qualifier_list: type_specifier specifier_qualifier_list
  111                         | type_specifier
  112                         | type_qualifier specifier_qualifier_list
  113                         | type_qualifier

  114 struct_declarator_list: struct_declarator
  115                       | struct_declarator_list ',' struct_declarator

  116 struct_declarator: declarator

  117 enum_specifier: ENUM '{' enumerator_list '}'
  118               | ENUM IDENTIFIER '{' enumerator_list '}'
  119               | ENUM IDENTIFIER

  120 enumerator_list: enumerator
  121                | enumerator_list ',' enumerator

  122 enumerator: IDENTIFIER
  123           | IDENTIFIER '=' constant_expression

  124 type_qualifier: CONST

  125 declarator: pointer direct_declarator
  126           | direct_declarator

  127 direct_declarator: IDENTIFIER
  128                  | direct_declarator '[' CONSTANT ']'
  129                  | direct_declarator '[' '-' CONSTANT ']'
  130                  | direct_declarator '(' parameter_type_list ')'
  131                  | direct_declarator '(' ')'

  132 pointer: '*'
  133        | '*' type_qualifier_list
  134        | '*' pointer
  135        | '*' type_qualifier_list pointer

  136 type_qualifier_list: type_qualifier
  137                    | type_qualifier_list type_qualifier

  138 parameter_type_list: parameter_list
  139                    | parameter_list ',' ELLIPSIS

  140 parameter_list: parameter_declaration
  141               | parameter_list ',' parameter_declaration

  142 parameter_declaration: declaration_specifiers declarator
  143                      | declaration_specifiers abstract_declarator
  144                      | declaration_specifiers

  145 type_name: specifier_qualifier_list
  146          | specifier_qualifier_list abstract_declarator

  147 abstract_declarator: pointer
  148                    | direct_abstract_declarator
  149                    | pointer direct_abstract_declarator

  150 direct_abstract_declarator: '[' ']'
  151                           | '[' CONSTANT ']'
  152                           | direct_abstract_declarator '[' ']'
  153                           | direct_abstract_declarator '[' CONSTANT ']'

  154 statement: labeled_statement
  155          | compound_statement
  156          | expression_statement
  157          | selection_statement
  158          | iteration_statement
  159          | jump_statement

  160 labeled_statement: IDENTIFIER ':' statement
  161                  | CASE constant_expression ':' statement
  162                  | DEFAULT ':' statement

  163 compound_statement: '{' '}'
  164                   | '{' statement_list '}'
  165                   | '{' declaration_list '}'
  166                   | '{' declaration_list statement_list '}'

  167 declaration_list: declaration
  168                 | declaration_list declaration

  169 statement_list: statement
  170               | statement_list statement

  171 expression_statement: ';'
  172                     | expression ';'

  173 selection_statement: IF '(' expression ')' M_LABEL statement
  174                    | IF '(' expression ')' M_LABEL statement ELSE M_GOTO M_LABEL statement
  175                    | SWITCH '(' expression ')' statement

  176 iteration_statement: WHILE '(' M_LABEL expression ')' M_LABEL statement
  177                    | DO M_LABEL statement WHILE '(' M_LABEL expression ')' ';'
  178                    | FOR '(' expression_statement M_LABEL expression_statement ')' M_LABEL statement
  179                    | FOR '(' expression_statement M_LABEL expression_statement M_GOTO M_LABEL expression M_GOTO ')' M_LABEL statement

  180 jump_statement: GOTO IDENTIFIER ';'
  181               | CONTINUE ';'
  182               | BREAK ';'
  183               | RETURN ';'
  184               | RETURN expression ';'

  185 translation_unit: external_declaration
  186                 | translation_unit external_declaration

  187 external_declaration: function_definition
  188                     | declaration

  189 function_declaration: declaration_specifiers declarator

  190 function_definition: function_declaration compound_statement

  191 M_LABEL: %empty

  192 M_GOTO: %empty


Terminals, with rules where they appear

    $end (0) 0
    '!' <node> (33) 26
    '%' <node> (37) 32
    '&' <node> (38) 21 48
    '(' <node> (40) 4 7 8 20 28 130 131 173 174 175 176 177 178 179
    ')' <node> (41) 4 7 8 20 28 130 131 173 174 175 176 177 178 179
    '*' <node> (42) 22 30 132 133 134 135
    '+' <node> (43) 23 34
    ',' <node> (44) 14 73 84 86 115 121 139 141
    '-' <node> (45) 24 35 129
    '.' <node> (46) 9
    '/' <node> (47) 31
    ':' <node> (58) 58 160 161 162
    ';' <node> (59) 75 76 109 171 172 177 180 181 182 183 184
    '<' <node> (60) 40
    '=' <terminal> (61) 61 88 123
    '>' <node> (62) 41
    '?' <node> (63) 58
    '[' <node> (91) 6 128 129 150 151 152 153
    ']' <node> (93) 6 128 129 150 151 152 153
    '^' <node> (94) 50
    '{' <node> (123) 102 117 118 163 164 165 166
    '|' <node> (124) 52
    '}' <node> (125) 102 117 118 163 164 165 166
    '~' <node> (126) 25
    error (256) 85 86
    SIZEOF <terminal> (258) 19 20
    IDENTIFIER <identifier> (259) 1 7 8 9 10 104 118 119 122 123 127 160 180
    CONSTANT <constant> (260) 2 128 129 151 153
    STRING_LITERAL <string_literal> (261) 3
    INC_OP <terminal> (262) 11 16
    DEC_OP <terminal> (263) 12 17
    PTR_OP <node> (264) 10
    LEFT_OP <node> (265) 37
    RIGHT_OP <node> (266) 38
    LE_OP <node> (267) 42
    GE_OP <node> (268) 43
    EQ_OP <node> (269) 45
    NE_OP <node> (270) 46
    AND_OP <node> (271) 54
    OR_OP <node> (272) 56
    MUL_ASSIGN <node> (273) 62
    DIV_ASSIGN <node> (274) 63
    MOD_ASSIGN <node> (275) 64
    ADD_ASSIGN <node> (276) 65
    SUB_ASSIGN <node> (277) 66
    LEFT_ASSIGN <node> (278) 67
    RIGHT_ASSIGN <node> (279) 68
    AND_ASSIGN <node> (280) 69
    XOR_ASSIGN <node> (281) 70
    OR_ASSIGN <node> (282) 71
    TYPEDEF <value> (283) 89
    EXTERN <value> (284)
    STATIC <value> (285)
    AUTO <value> (286)
    REGISTER <value> (287)
    SIGNED <type_specifier> (288) 97
    UNSIGNED <type_specifier> (289) 98
    CHAR <type_specifier> (290) 91
    SHORT <type_specifier> (291) 92
    LONG <type_specifier> (292) 94
    INT <type_specifier> (293) 93
    FLOAT <type_specifier> (294) 95
    DOUBLE <type_specifier> (295) 96
    VOID <type_specifier> (296) 90
    TYPE_NAME <type_specifier> (297) 101
    CONST <value> (298) 124
    VOLATILE <value> (299)
    STRUCT <value> (300) 105
    UNION <value> (301) 106
    ENUM <value> (302) 117 118 119
    ELLIPSIS <value> (303) 139
    CASE <node> (304) 161
    DEFAULT <node> (305) 162
    IF <node> (306) 173 174
    ELSE <node> (307) 174
    SWITCH <node> (308) 175
    WHILE <node> (309) 176 177
    DO <node> (310) 177
    FOR <node> (311) 178 179
    GOTO <node> (312) 180
    CONTINUE <node> (313) 181
    BREAK <node> (314) 182
    RETURN <node> (315) 183 184


Nonterminals, with rules where they appear

    $accept (85)
        on left: 0
    primary_expression <expression> (86)
        on left: 1 2 3 4
        on right: 5
    postfix_expression <expression> (87)
        on left: 5 6 7 8 9 10 11 12
        on right: 6 9 10 11 12 15
    argument_expression_list <argument_expression_list> (88)
        on left: 13 14
        on right: 8 14
    unary_expression <expression> (89)
        on left: 15 16 17 18 19 20
        on right: 16 17 19 27 60
    unary_operator <node> (90)
        on left: 21 22 23 24 25 26
        on right: 18
    cast_expression <expression> (91)
        on left: 27 28
        on right: 18 28 29 30 31 32
    multiplicative_expression <expression> (92)
        on left: 29 30 31 32
        on right: 30 31 32 33 34 35
    additive_expression <expression> (93)
        on left: 33 34 35
        on right: 34 35 36 37 38
    shift_expression <expression> (94)
        on left: 36 37 38
        on right: 37 38 39 40 41 42 43
    relational_expression <expression> (95)
        on left: 39 40 41 42 43
        on right: 40 41 42 43 44 45 46
    equality_expression <expression> (96)
        on left: 44 45 46
        on right: 45 46 47 48
    and_expression <expression> (97)
        on left: 47 48
        on right: 48 49 50
    exclusive_or_expression <expression> (98)
        on left: 49 50
        on right: 50 51 52
    inclusive_or_expression <expression> (99)
        on left: 51 52
        on right: 52 53 54
    logical_and_expression <expression> (100)
        on left: 53 54
        on right: 54 55 56
    logical_or_expression <expression> (101)
        on left: 55 56
        on right: 56 57 58
    conditional_expression <expression> (102)
        on left: 57 58
        on right: 58 59 74
    assignment_expression <expression> (103)
        on left: 59 60
        on right: 13 14 60 72 73 88
    assignment_operator <node> (104)
        on left: 61 62 63 64 65 66 67 68 69 70 71
        on right: 60
    expression <expression> (105)
        on left: 72 73
        on right: 4 6 58 73 172 173 174 175 176 177 179 184
    constant_expression <node> (106)
        on left: 74
        on right: 123 161
    declaration <declaration> (107)
        on left: 75 76
        on right: 167 168 188
    declaration_specifiers <declaration_specifiers> (108)
        on left: 77 78 79 80 81 82
        on right: 75 76 78 80 82 142 143 144 189
    init_declarator_list <init_declarator_list> (109)
        on left: 83 84 85 86
        on right: 76 84 86
    init_declarator <declarator> (110)
        on left: 87 88
        on right: 83 84
    storage_class_specifier <value> (111)
        on left: 89
        on right: 77 78
    type_specifier <type_specifier> (112)
        on left: 90 91 92 93 94 95 96 97 98 99 100 101
        on right: 79 80 110 111
    struct_or_union_specifier <type_specifier> (113)
        on left: 102 103
        on right: 99
    struct_or_union_id <type_specifier> (114)
        on left: 104
        on right: 102 103
    struct_or_union <value> (115)
        on left: 105 106
        on right: 104
    struct_declaration_list <struct_declaration_list> (116)
        on left: 107 108
        on right: 102 108
    struct_declaration <struct_declaration> (117)
        on left: 109
        on right: 107 108
    specifier_qualifier_list <specifier_qualifier_list> (118)
        on left: 110 111 112 113
        on right: 109 110 112 145 146
    struct_declarator_list <init_declarator_list> (119)
        on left: 114 115
        on right: 109 115
    struct_declarator <declarator> (120)
        on left: 116
        on right: 114 115
    enum_specifier <type_specifier> (121)
        on left: 117 118 119
        on right: 100
    enumerator_list <enumerator_list> (122)
        on left: 120 121
        on right: 117 118 121
    enumerator <enumerator> (123)
        on left: 122 123
        on right: 120 121
    type_qualifier <value> (124)
        on left: 124
        on right: 81 82 112 113 136 137
    declarator <declarator> (125)
        on left: 125 126
        on right: 87 88 116 142 189
    direct_declarator <direct_declarator> (126)
        on left: 127 128 129 130 131
        on right: 125 126 128 129 130 131
    pointer <pointer> (127)
        on left: 132 133 134 135
        on right: 125 134 135 147 149
    type_qualifier_list <type_qualifier_list> (128)
        on left: 136 137
        on right: 133 135 137
    parameter_type_list <parameter_type_list> (129)
        on left: 138 139
        on right: 130
    parameter_list <parameter_type_list> (130)
        on left: 140 141
        on right: 138 139 141
    parameter_declaration <parameter_declaration> (131)
        on left: 142 143 144
        on right: 140 141
    type_name <type_name> (132)
        on left: 145 146
        on right: 20 28
    abstract_declarator <abstract_declarator> (133)
        on left: 147 148 149
        on right: 143 146
    direct_abstract_declarator <direct_abstract_declarator> (134)
        on left: 150 151 152 153
        on right: 148 149 152 153
    statement <statement> (135)
        on left: 154 155 156 157 158 159
        on right: 160 161 162 169 170 173 174 175 176 177 178 179
    labeled_statement <node> (136)
        on left: 160 161 162
        on right: 154
    compound_statement <node> (137)
        on left: 163 164 165 166
        on right: 155 190
    declaration_list <declaration_list> (138)
        on left: 167 168
        on right: 165 166 168
    statement_list <node> (139)
        on left: 169 170
        on right: 164 166 170
    expression_statement <expression> (140)
        on left: 171 172
        on right: 156 178 179
    selection_statement <node> (141)
        on left: 173 174 175
        on right: 157
    iteration_statement <node> (142)
        on left: 176 177 178 179
        on right: 158
    jump_statement <node> (143)
        on left: 180 181 182 183 184
        on right: 159
    translation_unit <node> (144)
        on left: 185 186
        on right: 0 186
    external_declaration <node> (145)
        on left: 187 188
        on right: 185 186
    function_declaration <function_definition> (146)
        on left: 189
        on right: 190
    function_definition <function_definition> (147)
        on left: 190
        on right: 187
    M_LABEL <label> (148)
        on left: 191
        on right: 173 174 176 177 178 179
    M_GOTO <_goto> (149)
        on left: 192
        on right: 174 179


State 0

    0 $accept: . translation_unit $end

    TYPEDEF    shift, and go to state 1
    SIGNED     shift, and go to state 2
    UNSIGNED   shift, and go to state 3
    CHAR       shift, and go to state 4
    SHORT      shift, and go to state 5
    LONG       shift, and go to state 6
    INT        shift, and go to state 7
    FLOAT      shift, and go to state 8
    DOUBLE     shift, and go to state 9
    VOID       shift, and go to state 10
    TYPE_NAME  shift, and go to state 11
    CONST      shift, and go to state 12
    STRUCT     shift, and go to state 13
    UNION      shift, and go to state 14
    ENUM       shift, and go to state 15

    declaration                go to state 16
    declaration_specifiers     go to state 17
    storage_class_specifier    go to state 18
    type_specifier             go to state 19
    struct_or_union_specifier  go to state 20
    struct_or_union_id         go to state 21
    struct_or_union            go to state 22
    enum_specifier             go to state 23
    type_qualifier             go to state 24
    translation_unit           go to state 25
    external_declaration       go to state 26
    function_declaration       go to state 27
    function_definition        go to state 28


State 1

   89 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 89 (storage_class_specifier)


State 2

   97 type_specifier: SIGNED .

    $default  reduce using rule 97 (type_specifier)


State 3

   98 type_specifier: UNSIGNED .

    $default  reduce using rule 98 (type_specifier)


State 4

   91 type_specifier: CHAR .

    $default  reduce using rule 91 (type_specifier)


State 5

   92 type_specifier: SHORT .

    $default  reduce using rule 92 (type_specifier)


State 6

   94 type_specifier: LONG .

    $default  reduce using rule 94 (type_specifier)


State 7

   93 type_specifier: INT .

    $default  reduce using rule 93 (type_specifier)


State 8

   95 type_specifier: FLOAT .

    $default  reduce using rule 95 (type_specifier)


State 9

   96 type_specifier: DOUBLE .

    $default  reduce using rule 96 (type_specifier)


State 10

   90 type_specifier: VOID .

    $default  reduce using rule 90 (type_specifier)


State 11

  101 type_specifier: TYPE_NAME .

    $default  reduce using rule 101 (type_specifier)


State 12

  124 type_qualifier: CONST .

    $default  reduce using rule 124 (type_qualifier)


State 13

  105 struct_or_union: STRUCT .

    $default  reduce using rule 105 (struct_or_union)


State 14

  106 struct_or_union: UNION .

    $default  reduce using rule 106 (struct_or_union)


State 15

  117 enum_specifier: ENUM . '{' enumerator_list '}'
  118               | ENUM . IDENTIFIER '{' enumerator_list '}'
  119               | ENUM . IDENTIFIER

    '{'         shift, and go to state 29
    IDENTIFIER  shift, and go to state 30


State 16

  188 external_declaration: declaration .

    $default  reduce using rule 188 (external_declaration)


State 17

   75 declaration: declaration_specifiers . ';'
   76            | declaration_specifiers . init_declarator_list ';'
  189 function_declaration: declaration_specifiers . declarator

    error       shift, and go to state 31
    '*'         shift, and go to state 32
    ';'         shift, and go to state 33
    IDENTIFIER  shift, and go to state 34

    init_declarator_list  go to state 35
    init_declarator       go to state 36
    declarator            go to state 37
    direct_declarator     go to state 38
    pointer               go to state 39


State 18

   77 declaration_specifiers: storage_class_specifier .
   78                       | storage_class_specifier . declaration_specifiers

    TYPEDEF    shift, and go to state 1
    SIGNED     shift, and go to state 2
    UNSIGNED   shift, and go to state 3
    CHAR       shift, and go to state 4
    SHORT      shift, and go to state 5
    LONG       shift, and go to state 6
    INT        shift, and go to state 7
    FLOAT      shift, and go to state 8
    DOUBLE     shift, and go to state 9
    VOID       shift, and go to state 10
    TYPE_NAME  shift, and go to state 11
    CONST      shift, and go to state 12
    STRUCT     shift, and go to state 13
    UNION      shift, and go to state 14
    ENUM       shift, and go to state 15

    $default  reduce using rule 77 (declaration_specifiers)

    declaration_specifiers     go to state 40
    storage_class_specifier    go to state 18
    type_specifier             go to state 19
    struct_or_union_specifier  go to state 20
    struct_or_union_id         go to state 21
    struct_or_union            go to state 22
    enum_specifier             go to state 23
    type_qualifier             go to state 24


State 19

   79 declaration_specifiers: type_specifier .
   80                       | type_specifier . declaration_specifiers

    TYPEDEF    shift, and go to state 1
    SIGNED     shift, and go to state 2
    UNSIGNED   shift, and go to state 3
    CHAR       shift, and go to state 4
    SHORT      shift, and go to state 5
    LONG       shift, and go to state 6
    INT        shift, and go to state 7
    FLOAT      shift, and go to state 8
    DOUBLE     shift, and go to state 9
    VOID       shift, and go to state 10
    TYPE_NAME  shift, and go to state 11
    CONST      shift, and go to state 12
    STRUCT     shift, and go to state 13
    UNION      shift, and go to state 14
    ENUM       shift, and go to state 15

    $default  reduce using rule 79 (declaration_specifiers)

    declaration_specifiers     go to state 41
    storage_class_specifier    go to state 18
    type_specifier             go to state 19
    struct_or_union_specifier  go to state 20
    struct_or_union_id         go to state 21
    struct_or_union            go to state 22
    enum_specifier             go to state 23
    type_qualifier             go to state 24


State 20

   99 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 99 (type_specifier)


State 21

  102 struct_or_union_specifier: struct_or_union_id . '{' struct_declaration_list '}'
  103                          | struct_or_union_id .

    '{'  shift, and go to state 42

    $default  reduce using rule 103 (struct_or_union_specifier)


State 22

  104 struct_or_union_id: struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 43


State 23

  100 type_specifier: enum_specifier .

    $default  reduce using rule 100 (type_specifier)


State 24

   81 declaration_specifiers: type_qualifier .
   82                       | type_qualifier . declaration_specifiers

    TYPEDEF    shift, and go to state 1
    SIGNED     shift, and go to state 2
    UNSIGNED   shift, and go to state 3
    CHAR       shift, and go to state 4
    SHORT      shift, and go to state 5
    LONG       shift, and go to state 6
    INT        shift, and go to state 7
    FLOAT      shift, and go to state 8
    DOUBLE     shift, and go to state 9
    VOID       shift, and go to state 10
    TYPE_NAME  shift, and go to state 11
    CONST      shift, and go to state 12
    STRUCT     shift, and go to state 13
    UNION      shift, and go to state 14
    ENUM       shift, and go to state 15

    $default  reduce using rule 81 (declaration_specifiers)

    declaration_specifiers     go to state 44
    storage_class_specifier    go to state 18
    type_specifier             go to state 19
    struct_or_union_specifier  go to state 20
    struct_or_union_id         go to state 21
    struct_or_union            go to state 22
    enum_specifier             go to state 23
    type_qualifier             go to state 24


State 25

    0 $accept: translation_unit . $end
  186 translation_unit: translation_unit . external_declaration

    $end       shift, and go to state 45
    TYPEDEF    shift, and go to state 1
    SIGNED     shift, and go to state 2
    UNSIGNED   shift, and go to state 3
    CHAR       shift, and go to state 4
    SHORT      shift, and go to state 5
    LONG       shift, and go to state 6
    INT        shift, and go to state 7
    FLOAT      shift, and go to state 8
    DOUBLE     shift, and go to state 9
    VOID       shift, and go to state 10
    TYPE_NAME  shift, and go to state 11
    CONST      shift, and go to state 12
    STRUCT     shift, and go to state 13
    UNION      shift, and go to state 14
    ENUM       shift, and go to state 15

    declaration                go to state 16
    declaration_specifiers     go to state 17
    storage_class_specifier    go to state 18
    type_specifier             go to state 19
    struct_or_union_specifier  go to state 20
    struct_or_union_id         go to state 21
    struct_or_union            go to state 22
    enum_specifier             go to state 23
    type_qualifier             go to state 24
    external_declaration       go to state 46
    function_declaration       go to state 27
    function_definition        go to state 28


State 26

  185 translation_unit: external_declaration .

    $default  reduce using rule 185 (translation_unit)


State 27

  190 function_definition: function_declaration . compound_statement

    '{'  shift, and go to state 47

    compound_statement  go to state 48


State 28

  187 external_declaration: function_definition .

    $default  reduce using rule 187 (external_declaration)


State 29

  117 enum_specifier: ENUM '{' . enumerator_list '}'

    IDENTIFIER  shift, and go to state 49

    enumerator_list  go to state 50
    enumerator       go to state 51


State 30

  118 enum_specifier: ENUM IDENTIFIER . '{' enumerator_list '}'
  119               | ENUM IDENTIFIER .

    '{'  shift, and go to state 52

    $default  reduce using rule 119 (enum_specifier)


State 31

   85 init_declarator_list: error .

    $default  reduce using rule 85 (init_declarator_list)


State 32

  132 pointer: '*' .
  133        | '*' . type_qualifier_list
  134        | '*' . pointer
  135        | '*' . type_qualifier_list pointer

    '*'    shift, and go to state 32
    CONST  shift, and go to state 12

    $default  reduce using rule 132 (pointer)

    type_qualifier       go to state 53
    pointer              go to state 54
    type_qualifier_list  go to state 55


State 33

   75 declaration: declaration_specifiers ';' .

    $default  reduce using rule 75 (declaration)


State 34

  127 direct_declarator: IDENTIFIER .

    $default  reduce using rule 127 (direct_declarator)


State 35

   76 declaration: declaration_specifiers init_declarator_list . ';'
   84 init_declarator_list: init_declarator_list . ',' init_declarator
   86                     | init_declarator_list . ',' error

    ','  shift, and go to state 56
    ';'  shift, and go to state 57


State 36

   83 init_declarator_list: init_declarator .

    $default  reduce using rule 83 (init_declarator_list)


State 37

   87 init_declarator: declarator .
   88                | declarator . '=' assignment_expression
  189 function_declaration: declaration_specifiers declarator .

    '='  shift, and go to state 58

    '{'       reduce using rule 189 (function_declaration)
    $default  reduce using rule 87 (init_declarator)


State 38

  126 declarator: direct_declarator .
  128 direct_declarator: direct_declarator . '[' CONSTANT ']'
  129                  | direct_declarator . '[' '-' CONSTANT ']'
  130                  | direct_declarator . '(' parameter_type_list ')'
  131                  | direct_declarator . '(' ')'

    '('  shift, and go to state 59
    '['  shift, and go to state 60

    $default  reduce using rule 126 (declarator)


State 39

  125 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 34

    direct_declarator  go to state 61


State 40

   78 declaration_specifiers: storage_class_specifier declaration_specifiers .

    $default  reduce using rule 78 (declaration_specifiers)


State 41

   80 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 80 (declaration_specifiers)


State 42

  102 struct_or_union_specifier: struct_or_union_id '{' . struct_declaration_list '}'

    SIGNED     shift, and go to state 2
    UNSIGNED   shift, and go to state 3
    CHAR       shift, and go to state 4
    SHORT      shift, and go to state 5
    LONG       shift, and go to state 6
    INT        shift, and go to state 7
    FLOAT      shift, and go to state 8
    DOUBLE     shift, and go to state 9
    VOID       shift, and go to state 10
    TYPE_NAME  shift, and go to state 11
    CONST      shift, and go to state 12
    STRUCT     shift, and go to state 13
    UNION      shift, and go to state 14
    ENUM       shift, and go to state 15

    type_specifier             go to state 62
    struct_or_union_specifier  go to state 20
    struct_or_union_id         go to state 21
    struct_or_union            go to state 22
    struct_declaration_list    go to state 63
    struct_declaration         go to state 64
    specifier_qualifier_list   go to state 65
    enum_specifier             go to state 23
    type_qualifier             go to state 66


State 43

  104 struct_or_union_id: struct_or_union IDENTIFIER .

    $default  reduce using rule 104 (struct_or_union_id)


State 44

   82 declaration_specifiers: type_qualifier declaration_specifiers .

    $default  reduce using rule 82 (declaration_specifiers)


State 45

    0 $accept: translation_unit $end .

    $default  accept


State 46

  186 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 186 (translation_unit)


State 47

  163 compound_statement: '{' . '}'
  164                   | '{' . statement_list '}'
  165                   | '{' . declaration_list '}'
  166                   | '{' . declaration_list statement_list '}'

    '('             shift, and go to state 67
    '+'             shift, and go to state 68
    '-'             shift, and go to state 69
    '!'             shift, and go to state 70
    '&'             shift, and go to state 71
    '*'             shift, and go to state 72
    '~'             shift, and go to state 73
    ';'             shift, and go to state 74
    '{'             shift, and go to state 47
    '}'             shift, and go to state 75
    SIZEOF          shift, and go to state 76
    IDENTIFIER      shift, and go to state 77
    CONSTANT        shift, and go to state 78
    STRING_LITERAL  shift, and go to state 79
    INC_OP          shift, and go to state 80
    DEC_OP          shift, and go to state 81
    TYPEDEF         shift, and go to state 1
    SIGNED          shift, and go to state 2
    UNSIGNED        shift, and go to state 3
    CHAR            shift, and go to state 4
    SHORT           shift, and go to state 5
    LONG            shift, and go to state 6
    INT             shift, and go to state 7
    FLOAT           shift, and go to state 8
    DOUBLE          shift, and go to state 9
    VOID            shift, and go to state 10
    TYPE_NAME       shift, and go to state 11
    CONST           shift, and go to state 12
    STRUCT          shift, and go to state 13
    UNION           shift, and go to state 14
    ENUM            shift, and go to state 15
    CASE            shift, and go to state 82
    DEFAULT         shift, and go to state 83
    IF              shift, and go to state 84
    SWITCH          shift, and go to state 85
    WHILE           shift, and go to state 86
    DO              shift, and go to state 87
    FOR             shift, and go to state 88
    GOTO            shift, and go to state 89
    CONTINUE        shift, and go to state 90
    BREAK           shift, and go to state 91
    RETURN          shift, and go to state 92

    primary_expression         go to state 93
    postfix_expression         go to state 94
    unary_expression           go to state 95
    unary_operator             go to state 96
    cast_expression            go to state 97
    multiplicative_expression  go to state 98
    additive_expression        go to state 99
    shift_expression           go to state 100
    relational_expression      go to state 101
    equality_expression        go to state 102
    and_expression             go to state 103
    exclusive_or_expression    go to state 104
    inclusive_or_expression    go to state 105
    logical_and_expression     go to state 106
    logical_or_expression      go to state 107
    conditional_expression     go to state 108
    assignment_expression      go to state 109
    expression                 go to state 110
    declaration                go to state 111
    declaration_specifiers     go to state 112
    storage_class_specifier    go to state 18
    type_specifier             go to state 19
    struct_or_union_specifier  go to state 20
    struct_or_union_id         go to state 21
    struct_or_union            go to state 22
    enum_specifier             go to state 23
    type_qualifier             go to state 24
    statement                  go to state 113
    labeled_statement          go to state 114
    compound_statement         go to state 115
    declaration_list           go to state 116
    statement_list             go to state 117
    expression_statement       go to state 118
    selection_statement        go to state 119
    iteration_statement        go to state 120
    jump_statement             go to state 121


State 48

  190 function_definition: function_declaration compound_statement .

    $default  reduce using rule 190 (function_definition)


State 49

  122 enumerator: IDENTIFIER .
  123           | IDENTIFIER . '=' constant_expression

    '='  shift, and go to state 122

    $default  reduce using rule 122 (enumerator)


State 50

  117 enum_specifier: ENUM '{' enumerator_list . '}'
  121 enumerator_list: enumerator_list . ',' enumerator

    ','  shift, and go to state 123
    '}'  shift, and go to state 124


State 51

  120 enumerator_list: enumerator .

    $default  reduce using rule 120 (enumerator_list)


State 52

  118 enum_specifier: ENUM IDENTIFIER '{' . enumerator_list '}'

    IDENTIFIER  shift, and go to state 49

    enumerator_list  go to state 125
    enumerator       go to state 51


State 53

  136 type_qualifier_list: type_qualifier .

    $default  reduce using rule 136 (type_qualifier_list)


State 54

  134 pointer: '*' pointer .

    $default  reduce using rule 134 (pointer)


State 55

  133 pointer: '*' type_qualifier_list .
  135        | '*' type_qualifier_list . pointer
  137 type_qualifier_list: type_qualifier_list . type_qualifier

    '*'    shift, and go to state 32
    CONST  shift, and go to state 12

    $default  reduce using rule 133 (pointer)

    type_qualifier  go to state 126
    pointer         go to state 127


State 56

   84 init_declarator_list: init_declarator_list ',' . init_declarator
   86                     | init_declarator_list ',' . error

    error       shift, and go to state 128
    '*'         shift, and go to state 32
    IDENTIFIER  shift, and go to state 34

    init_declarator    go to state 129
    declarator         go to state 130
    direct_declarator  go to state 38
    pointer            go to state 39


State 57

   76 declaration: declaration_specifiers init_declarator_list ';' .
